# aeroforge-nitrosense-alternative

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
aeroforge-service/: Cargo.toml
aeroforge-service/src/: host.rs  main.rs  paths.rs
aeroforge-service/src/workers/: capability.rs  control.rs  ipc.rs  lowlevel.rs  mod.rs  persistence.rs  telemetry.rs
aeroforge-service/src/workers/capability/: models.rs  probes.rs
aeroforge-service/src/workers/control/: acer_hid.rs  acer_wmi.rs  boot_logo.rs  fan.rs  gpu_tuning.rs  models.rs  nvapi_whisper.rs  nvidia_power.rs  nvml.rs  power.rs  rapl_power.rs  smart_charge.rs  state.rs
aeroforge-service/src/workers/ipc/: handlers.rs  models.rs  pipe.rs
aeroforge-service/src/workers/lowlevel/: models.rs  pawnio.rs  topology.rs  winring.rs
aeroforge-service/src/workers/persistence/: models.rs  state.rs
aeroforge-service/src/workers/telemetry/: acer_hid_status.rs  cache.rs  cpu.rs  firmware.rs  gpu.rs  hardware_identity.rs  models.rs  power.rs  system.rs
scripts/: AeroForge-Debug-Collector.cmd  Generate-Brand-Icons.ps1  Install-AeroForgeService.ps1  Install-AeroForgeStartup.ps1  Make-DebugCollector.ps1  Make-InstallerBridgeZip.ps1  Make-Portable.ps1  Prepare-BundleResources.ps1  Probe-NvApiPstates.py  Publish-GitHubRelease.ps1  Resolve-NodePath.ps1  Run-FrontendBuild.ps1  Run-FrontendDev.ps1  Set-IntelRaplPl1ToPl2.ps1  Start-AeroForgeHotkeyHelper.ps1  Trace-AeroForgeCpuTdp.cmd  Trace-AeroForgeCpuTdp.ps1  Trace-AfterburnerCoreStructs.py  Trace-AfterburnerMemoryStructs.py  Trace-AfterburnerNvapiRuntime.py  Uninstall-AeroForgeService.ps1  Uninstall-AeroForgeStartup.ps1  nvapi_drs_probe.c
src/: App.css  App.tsx  index.css
src-tauri/: Cargo.toml  installer-hooks.nsh  tauri.conf.json
src-tauri/resources/: Install-AeroForgeBundledService.ps1
src-tauri/src/: lib.rs  main.rs
src-tauri/src/backend/: blue_light.rs  boot_logo.rs  commands.rs  cpu_clock.rs  display_refresh.rs  mod.rs  models.rs  nitro_guard.rs  nitro_key.rs  service_pipe.rs  single_instance.rs  smart_charge.rs  state.rs  updater.rs
src/lib/: backend.ts
