[package]
name = "aeroforge-service"
version = "0.11.0"
edition = "2021"
rust-version = "1.77.2"
description = "Barebones AeroForge Windows service host for parallel hardware workers."

[dependencies]
ctrlc = "3.4"
libloading = "0.8"
regex = "1.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
windows-sys = { version = "0.61", features = ["Win32_Devices_DeviceAndDriverInstallation", "Win32_Devices_HumanInterfaceDevice", "Win32_Foundation", "Win32_Security", "Win32_Security_Authorization", "Win32_Storage_FileSystem", "Win32_System_IO", "Win32_System_Pipes", "Win32_System_Power", "Win32_System_Services", "Win32_System_SystemInformation", "Win32_System_Threading"] }
windows-service = "0.7"
